4881-app - Different improvements around MSV3 server synchronization
* remove an obsolete and unwanded ddl-drop-create
* use the docker container's memory settings
https://github.com/metasfresh/metasfresh/issues/4881